improved logging for search "bulkWrite": show included correlation-ids in a bulkWrite DEBUG statement when debug logging is activated * fixed passing through events in metadata
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>