@@ -15,7 +15,6 @@ package org.eclipse.ditto.thingsearch.service.persistence.write.streaming;
 import java.util.Collection;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.bson.BsonDocument;
 import org.eclipse.ditto.internal.utils.akka.logging.DittoLoggerFactory;
@@ -25,6 +24,7 @@ import org.eclipse.ditto.internal.utils.metrics.instruments.timer.StartedTimer;
 import org.eclipse.ditto.thingsearch.service.common.config.PersistenceStreamConfig;
 import org.eclipse.ditto.thingsearch.service.persistence.PersistenceConstants;
 import org.eclipse.ditto.thingsearch.service.persistence.write.model.AbstractWriteModel;
+import org.eclipse.ditto.thingsearch.service.persistence.write.model.Metadata;
 import org.eclipse.ditto.thingsearch.service.persistence.write.model.WriteResultAndErrors;
 
 import com.mongodb.MongoBulkWriteException;
@@ -124,8 +124,8 @@ final class MongoSearchUpdaterFlow {
         } else {
             theCollection = collection;
         }
-        final var abstractWriteModels = pairs.stream().map(Pair::first).collect(Collectors.toList());
-        final var writeModels = pairs.stream().map(Pair::second).collect(Collectors.toList());
+        final var abstractWriteModels = pairs.stream().map(Pair::first).toList();
+        final var writeModels = pairs.stream().map(Pair::second).toList();
 
         if (writeModels.isEmpty()) {
             LOGGER.debug("Requested to make empty update by write models <{}>", abstractWriteModels);
@@ -136,8 +136,18 @@ final class MongoSearchUpdaterFlow {
         }
 
         final String bulkWriteCorrelationId = UUID.randomUUID().toString();
-        LOGGER.withCorrelationId(bulkWriteCorrelationId)
-                .debug("Executing BulkWrite <{}>", writeModels);
+        if (LOGGER.isDebugEnabled()) {
+            LOGGER.withCorrelationId(bulkWriteCorrelationId)
+                    .debug("Executing BulkWrite containing correlationIds: {}", abstractWriteModels.stream()
+                            .map(AbstractWriteModel::getMetadata)
+                            .map(Metadata::getEventsCorrelationIds)
+                            .flatMap(List::stream)
+                            .toList());
+
+            // only log the complete MongoDB writeModels on "TRACE" as they get really big and almost crash the logging backend:
+            LOGGER.withCorrelationId(bulkWriteCorrelationId)
+                    .trace("Executing BulkWrite <{}>", writeModels);
+        }
         final var bulkWriteTimer = startBulkWriteTimer(writeModels);
         return Source.fromPublisher(theCollection.bulkWrite(writeModels, new BulkWriteOptions().ordered(false)))
                 .map(bulkWriteResult -> WriteResultAndErrors.success(
